--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "mssql": "^11.0.1"
   },
   "devDependencies": {
+    "@types/connect": "^3.4.38",
     "@types/express": "^5.0.3",
     "@types/mssql": "^9.1.7",
     "ts-node-dev": "^2.0.0"
