--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-dbUser=
-dbPassword=
-dbServer=
-dbDatabase=
-dbInstanceName=
-secretPass=
-mailUser=
-mailAppPass=
+DB_USER=
+DB_PASSWORD=
+DB_SERVER=
+DB_DATABASE=
+JWT_SECRET=
+EMAIL_USER=
+EMAIL_PASS=
 PORT=
