--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/connect": "^3.4.38",
     "@types/express": "^5.0.3",
     "@types/mssql": "^9.1.7",
+    "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
