--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/connect": "^3.4.38",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.7",
     "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0"
