--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
@@ -13,6 +14,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.7",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0"
   },
