--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "vnpay": "^2.4.2"
   },
   "devDependencies": {
     "@types/connect": "^3.4.38",
