--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.7",
     "@types/multer": "^2.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0"
   },
