--- a/Be/package.json
+++ b/Be/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "cron": "^4.3.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/connect": "^3.4.38",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.7",
