--- a/Be/package.json
+++ b/Be/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/connect": "^3.4.38",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.7",
