--- a/Fe/package.json
+++ b/Fe/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
