--- a/Fe/package.json
+++ b/Fe/package.json
@@ -13,7 +13,8 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-date-time-picker": "^2.8.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
