--- a/Be/package.json
+++ b/Be/package.json
@@ -28,6 +28,6 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "ts-node server.ts"
   }
 }
