--- a/Be/tsconfig.json
+++ b/Be/tsconfig.json
@@ -10,6 +10,6 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+    "include": ["src/**/*.ts", "server.ts"],
+    "exclude": ["node_modules"]
 }
