--- a/Fe/package.json
+++ b/Fe/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^1.12.2",
     "mitt": "^3.0.1",
