--- a/Be/package.json
+++ b/Be/package.json
@@ -12,6 +12,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "redis": "^5.8.3",
+    "resend": "^6.3.0",
     "vnpay": "^2.4.4"
   },
   "devDependencies": {
