--- a/Fe/package.json
+++ b/Fe/package.json
@@ -13,6 +13,7 @@
     "mitt": "^3.0.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "resend": "^6.4.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vue3-date-time-picker": "^2.8.3"
